# SEEDRunner

./: .env.machines.example  .gitignore  AGENTS.md  README.md  REQUIREMENTS.md  SKILL.md  discussion.md  pyproject.toml  requirements.txt  suggest.md
docs/reference/: SEED_RUNNER_API.md
evals/: 2026-04-08-first-full-run.md
runs/: README.md  SKILL.md
seed_runner/: __init__.py  cli.py  config.py  mount.py  remote.py  session.py  state.py  utils.py
tests/: conftest.py  test_config.py  test_real_vm_integration.py  test_workflow_state.py
